--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -238,8 +238,10 @@
           if (cursos_organizacoes[tipo_de_retorno]) {
             total=0;
             for (var key in cursos_organizacoes[tipo_de_retorno]){
-              if(primeiro) primeiro = false; else mensagem2 += ","; 
-              mensagem2 += " "+key+":"+cursos_organizacoes[tipo_de_retorno][key];
+              if(primeiro) primeiro = false; else mensagem2 += ",";
+              sigla_curso = key;
+              if(sigla_curso=="") sigla_curso="?";
+              mensagem2 += " "+sigla_curso+":"+cursos_organizacoes[tipo_de_retorno][key];
               total += cursos_organizacoes[tipo_de_retorno][key];
             }
             mensagem += " = ";
