menu de informações mais responsivo

--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -79,13 +79,15 @@
 
   <script>
     $(document).on('click','#informacoes_tag',function(){
-      $( "#toggle" ).toggle( "slide" );
+      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
+      else $("#informacoes").css("display", "block");
+      $("#toggle").toggle( "slide" );
     });
   </script>
 
-  <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
-    <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
-    <div id="toggle" style="display: none; height: 1em;">
+  <div id="informacoes" style="font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
+    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
+    <div id="toggle" style="padding-top: 10px;display: none;"> 
       <label><input id="local" onchange="($(this).prop('checked') ? $('.local').show() : $('.local').hide())" type="checkbox" checked /> local</label>&nbsp;&nbsp;&nbsp;
       <label><input id="link" onchange="($(this).prop('checked') ? $('.link').show() : $('.link').hide())" type="checkbox" checked /> video-conferência</label>&nbsp;&nbsp;&nbsp;
       <label><input id="grupo" onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> grupo</label>&nbsp;&nbsp;&nbsp;
@@ -98,7 +100,7 @@
       <label><input id="editar" onchange="($(this).prop('checked') ? $('.editar').show() : $('.editar').hide())" type="checkbox" checked /> editar</label>&nbsp;&nbsp;&nbsp;
       <label><input id="sem_agendamento" onchange="($(this).prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide())" type="checkbox" checked /> sem agendamento</label>&nbsp;&nbsp;&nbsp;
     </div>
-  </span>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  </div>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
 
   {% if bancas %}
     <form method="get" id="editarbancasform" style="margin-top: 8px;">
