--- a/administracao/templates/administracao/propor.html
+++ b/administracao/templates/administracao/propor.html
@@ -80,17 +80,19 @@
 
     <script>
       $(document).on('click','#informacoes_tag',function(){
-        $( "#toggle" ).toggle( "slide" );
+        if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
+        else $("#informacoes").css("display", "block");
+        $("#toggle").toggle( "slide" );
       });
     </script>
     
-    <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
-      <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
-      <div id="toggle" style="display: none; height: 1em;">
+    <div id="informacoes" style="font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
+      <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
+      <div id="toggle" style="padding-top: 10px;display: none;"> 
         <label><input id="curso" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(2)').show() : $('#MapeamentoTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
         <label><input id="cr" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(3)').show() : $('#MapeamentoTable tr > *:nth-child(3)').hide())" type="checkbox"         /> CR</label>&nbsp;&nbsp;&nbsp;
       </div>
-    </span>
+    </div>
 
     <div class="atualizar">
       
