--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -47,19 +47,22 @@
 
   <script>
     $(document).on('click','#informacoes_tag',function(){
-      $( "#toggle" ).toggle( "slide" );
+      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
+      else $("#informacoes").css("display", "block");
+      $("#toggle").toggle( "slide" );
     });
   </script>
   
-  <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
-    <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
-    <div id="toggle" style="display: none; height: 1em;">
+
+  <div id="informacoes" style="font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
+    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
+    <div id="toggle" style="padding-top: 10px;display: none;"> 
       <label><input id="tit_ori" onchange="($(this).prop('checked') ? $('.tit_ori').show() : $('.tit_ori').hide())" type="checkbox" checked /> Título Original</label>&nbsp;&nbsp;&nbsp;
       <label><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
       <label><input id="coorientadores" onchange="($(this).prop('checked') ? $('.coorientadores').show() : $('.coorientadores').hide())" type="checkbox" checked /> Coorientadores</label>&nbsp;&nbsp;&nbsp;
       <label><input id="confidencial" onchange="($(this).prop('checked') ? $('.confidencial').show() : $('.confidencial').hide())" type="checkbox" checked /> Confidenciais</label>&nbsp;&nbsp;&nbsp;
     </div>
-  </span>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  </div>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
 
 
   <br><br>
