--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -11,15 +11,19 @@
   margin-right: 16px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 520px) {
   .to_hide {
     font-size: 0.7rem;
+    min-width:22%;
+    max-width:18%;
+    width:2rem;
   }
   .to_label {
     padding: 4px !important;
   }
   .separador {
     margin-right: 6px;
+    width: 100vw;
   }
   #filterEdicao {
     padding-right: 22px;
@@ -28,7 +32,7 @@
 }
 </style>
 
-  <div class="row align-items-start mb-2" style="display: inline-block;">
+  <div class="row align-items-start mb-2" style="display: inline-block; margin-right: 3px;">
     <div class="ml-3">
       <div class="input-group input-group-sm">
         {% if not sem_edicao %}
@@ -53,7 +57,7 @@
         {% endif %}
         {% if com_cursos %}
           {% if not sem_edicao %}
-            <span class="separador input-group-addon"></span>
+          <div class="separador input-group-addon"></div>
           {% endif %}
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="filterCurso" onClick="recarregar_pagina()"><span class="to_hide">Curso</span></label>
@@ -78,7 +82,7 @@
                 <option value="C" {% if curso == "computação" %}selected{% endif %}>computação</option>
                 <option value="X" {% if curso == "mecatrônica" %}selected{% endif %}>mecatrônica</option>
                 <option value="M" {% if curso == "mecânica" %}selected{% endif %}>mecânica</option>
-                <option value="B" {% if curso == "ciencia" %}selected{% endif %}>ciência da computação</option>
+                {% comment %} <option value="B" {% if curso == "ciencia" %}selected{% endif %}>c. computação</option> {% endcomment %}
               {% endif %}
           </select>
         {% endif %}
