--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -44,17 +44,19 @@
 
   <script>
     $(document).on('click','#informacoes_tag',function(){
-      $( "#toggle" ).toggle( "slide" );
+      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
+      else $("#informacoes").css("display", "block");
+      $("#toggle").toggle( "slide" );
     });
   </script>
   
-  <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
-    <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
-    <div id="toggle" style="display: none; height: 1em;">
-      <label><input id="curso" onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(3)').show() : $('#AlunosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
+  <div id="informacoes" style="font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
+    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
+    <div id="toggle" style="padding-top: 10px;display: none;"> 
+       <label><input id="curso" onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(3)').show() : $('#AlunosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
       <label><input id="cr" onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(4)').show() : $('#AlunosTable tr > *:nth-child(4)').hide())" type="checkbox" /> CR</label>&nbsp;&nbsp;&nbsp;
     </div>
-  </span> {% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  </div> {% comment %} Mais elementos no carrega_pagina() {% endcomment %}
 
   {% comment %} <script>
     $("#informacoes").detach().appendTo("#lateral");
