--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -15,19 +15,20 @@
   .to_hide {
     font-size: 0.7rem;
     min-width:22%;
-    max-width:18%;
+    max-width:32%;
     width:2rem;
+  }
+  .to_hide2 {
+    font-size: 0.7rem;
+    min-width:60%;
+    max-width:70%;
   }
   .to_label {
     padding: 4px !important;
   }
   .separador {
-    margin-right: 6px;
+    margin-right: 0px;
     width: 100vw;
-  }
-  #filterEdicao {
-    padding-right: 22px;
-    padding-left: 2px;
   }
 }
 </style>
@@ -62,7 +63,7 @@
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="filterCurso" onClick="recarregar_pagina()"><span class="to_hide">Curso</span></label>
           </div>
-          <select class="filter custom-select w-auto" id="filterCurso" name="curso">
+          <select class="to_hide2 filter custom-select w-auto" id="filterCurso" name="curso">
               <option value="T">todos</option>
               {% if cursos %}
                 {% for c in cursos %}
@@ -136,7 +137,7 @@
           </div>
         {% endif %}
 
-        <div id="spinner" class="ml-2 input-group-append" style="visibility: hidden">
+        <div id="spinner" class="ml-2 input-group-prepend" style="visibility: hidden">
           <div class="spinner-border text-secondary ml-auto" style="width: 1.8rem; height: 1.8rem;" role="status" aria-hidden="true">
             <span class="sr-only input-group-text">Carregando...</span>
           </div>
