--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -49,8 +49,8 @@
     <option value="todas">todas contactadas</option>
     <option value="contactadas" {% if filtro == "todas contactadas" %}selected="selected"{% endif %}>todas em contato</option>
     <option value="0" {% if filtro == "sem retorno" %}selected="selected"{% endif %}>sem retorno</option>
-    <option value="1" {% if filtro == "confirmadas" %}selected="selected"{% endif %}>confirmadas</option>
-    <option value="2" {% if filtro == "interessadas" %}selected="selected"{% endif %}>interessadas</option>
+    <option value="1" {% if filtro == "interessadas" %}selected="selected"{% endif %}>interessadas</option>
+    <option value="2" {% if filtro == "confirmadas" %}selected="selected"{% endif %}>confirmadas</option>
     <option value="3" {% if filtro == "recusaram" %}selected="selected"{% endif %}>recusaram</option>
     <option value="4" {% if filtro == "notificada" %}selected="selected"{% endif %}>notificada</option>
     <option value="5" {% if filtro == "sem_grupo" %}selected="selected"{% endif %}>sem grupo</option>
@@ -218,16 +218,43 @@
 
       Organizações contactadas recentemente ({{total_organizacoes}}):<br>
 
-      &nbsp;<span style="background-color:lightblue">&nbsp;&nbsp;&nbsp;&nbsp;</span> Sondada <span id="so_contactados"></span><br>
-      &nbsp;<span style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;&nbsp;</span> Interessada <span id="interessados"></span><br>
-      &nbsp;<span style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;&nbsp;</span> Confirmada <span id="confirmados"></span><br>
-      &nbsp;<span style="background-color:pink">&nbsp;&nbsp;&nbsp;&nbsp;</span> Declinou <span id="recusados"></span><br>
+      <style>
+        .show-hide {
+          cursor: pointer;
+        }
+      </style>
+        
+      &nbsp;<span data-type="0" data-color="lightblue" class="show-hide" style="background-color:lightblue">&nbsp;&nbsp;&nbsp;</span> Sondada <span id="so_contactados"></span><br>
+      &nbsp;<span data-type="1" data-color="lemonchiffon" class="show-hide" style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;</span> Interessada <span id="interessados"></span><br>
+      &nbsp;<span data-type="2" data-color="lightgreen" class="show-hide" style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;</span> Confirmada <span id="confirmados"></span><br>
+      &nbsp;<span data-type="3" data-color="pink" class="show-hide" style="background-color:pink">&nbsp;&nbsp;&nbsp;</span> Declinou <span id="recusados"></span><br>
 
-      &nbsp;<span style="background-color:yellow">&nbsp;&nbsp;&nbsp;&nbsp;</span> Notificada de Grupo Fechado <span id="notificada"></span><br>
-      &nbsp;<span style="background-color:green">&nbsp;&nbsp;&nbsp;&nbsp;</span> Contrato Fechado para Projeto <span id="documentada"></span><br>
-      &nbsp;<span style="background-color:#e289df">&nbsp;&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo <span id="sem_grupo"></span><br>
+      &nbsp;<span data-type="4" data-color="yellow" class="show-hide" style="background-color:yellow">&nbsp;&nbsp;&nbsp;</span> Notificada de Grupo Fechado <span id="notificada"></span><br>
+      &nbsp;<span data-type="6" data-color="green" class="show-hide" style="background-color:green">&nbsp;&nbsp;&nbsp;</span> Contrato Fechado para Projeto <span id="documentada"></span><br>
+      &nbsp;<span data-type="5" data-color="#e289df" class="show-hide" style="background-color:#e289df">&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo <span id="sem_grupo"></span><br>
   
       <script>
+
+        $(".show-hide").click(function() {
+
+          click = $(this);
+          var filterValue = click.attr("data-type");
+
+          var row = $(".item");
+
+          row.each(function(i, el) {
+        
+            if( filterValue == $(el).attr("data-type") ) {
+              if($(el).is(":visible")) {
+                $(el).hide();
+                click.css({background: "linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%)"});
+              } else {
+                $(el).show();
+                click.css({background: click.attr("data-color") });
+              }
+            }
+          });
+        });
 
         function preenche_cursos(tipo_de_retorno) {
 
@@ -259,8 +286,8 @@
         function atualiza_situacoes() {
           document.getElementById('so_contactados').innerHTML = preenche_cursos(0);
           document.getElementById('recusados').innerHTML = preenche_cursos(3);
-          document.getElementById('interessados').innerHTML = preenche_cursos(2);
-          document.getElementById('confirmados').innerHTML = preenche_cursos(1);
+          document.getElementById('interessados').innerHTML = preenche_cursos(1);
+          document.getElementById('confirmados').innerHTML = preenche_cursos(2);
           document.getElementById('notificada').innerHTML = preenche_cursos(4);
           document.getElementById('documentada').innerHTML = preenche_cursos(6);
           document.getElementById('sem_grupo').innerHTML = preenche_cursos(5);
