--- a/administracao/templates/administracao/propor.html
+++ b/administracao/templates/administracao/propor.html
@@ -86,7 +86,7 @@
       });
     </script>
     
-    <div id="informacoes" style="font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
+    <div id="informacoes" style="width:fit-content; margin-bottom: 6px; font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
       <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
       <div id="toggle" style="padding-top: 10px;display: none;"> 
         <label><input id="curso" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(2)').show() : $('#MapeamentoTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
