--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -54,7 +54,7 @@
   </script>
   
 
-  <div id="informacoes" style="font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
+  <div id="informacoes" style="width:fit-content; margin-bottom: 6px; font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
     <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
     <div id="toggle" style="padding-top: 10px;display: none;"> 
       <label><input id="tit_ori" onchange="($(this).prop('checked') ? $('.tit_ori').show() : $('.tit_ori').hide())" type="checkbox" checked /> Título Original</label>&nbsp;&nbsp;&nbsp;
