layout de tabela de estudantes

--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -31,6 +31,11 @@
       display:inline-block; 
     }
 
+    th, td {
+      padding-left: 4px;
+      padding-right: 4px;
+    }
+
   </style>
 
 {% endblock %}
