--- a/templates/base.html
+++ b/templates/base.html
@@ -59,10 +59,12 @@
           <a href="{% url 'index_projetos'%}">Projetos</a>
         {% endif %}
 
-        <a href="{% url 'index_documentos'%}">Documentos</a>
+      {% endif %} 
 
+      <a href="{% url 'index_documentos'%}">Documentos</a>
+
+      {% if user.is_authenticated %}
         <a href="{% url 'logout'%}">Logout</a>
-
       {% else %}
         <a href="{% url 'login'%}?next={{request.path}}">Login</a>
       {% endif %} 
