--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -10,26 +10,6 @@
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
   
-  <style>
-    .arrow {
-      border: solid black;
-      border-width: 0px 2px 2px 0px;
-      display: inline-block;
-      padding: 2px;
-      vertical-align: middle;
-    }
-
-    .right {
-      transform: rotate(-45deg);
-      -webkit-transform: rotate(-45deg);
-    }
-
-    #toggle {
-      display:inline-block; 
-    }
-
-  </style>
-  
 {% endblock %}
 
 {% block content %}
@@ -49,25 +29,7 @@
     }));
   </script>
 
-  <script>
-    $(document).on('click','#informacoes_tag',function(){
-      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
-      else $("#informacoes").css("display", "block");
-      $("#toggle").toggle( "slide" );
-    });
-  </script>
-
-  <div id="informacoes" style="width:fit-content; margin-bottom: 6px; font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
-    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
-    <div id="toggle" style="padding-top: 10px;display: none;"> 
-      <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> orientador</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="local" onchange="($(this).prop('checked') ? $('.local').show() : $('.local').hide())" type="checkbox" checked /> local</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="grupo" onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> grupo</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> curso</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="facilitador" onchange="($(this).prop('checked') ? $('.facilitador').show() : $('.facilitador').hide())" type="checkbox" checked /> facilitador</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="sem_agendamento" onchange="($(this).prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide())" type="checkbox" checked /> sem agendamento</label>&nbsp;&nbsp;&nbsp;
-    </div>
-  </div>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  {% include "informacoes.html" %}
 
   <div class="atualizar">
 
@@ -167,15 +129,7 @@
 
     <script>
 
-      function carrega_pagina() {
-        ($("#orientador").prop('checked') ? $('.orientador').show() : $('.orientador').hide());
-        ($("#local").prop('checked') ? $('.local').show() : $('.local').hide());
-        ($("#grupo").prop('checked') ? $('.grupo').show() : $('.grupo').hide());
-        ($("#curso").prop('checked') ? $('.curso').show() : $('.curso').hide());
-        ($("#facilitador").prop('checked') ? $('.facilitador').show() : $('.facilitador').hide());
-        ($("#sem_agendamento").prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide());
-      };
-
+      function carrega_pagina() {};
       function carrega_site() {
         var filterEdicao = localStorage.getItem("filterEdicao");
         if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
