--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -13,26 +13,6 @@
 
   <script> {% include "tooltip.js" %} </script>
 
-  <style>
-    .arrow {
-      border: solid black;
-      border-width: 0px 2px 2px 0px;
-      display: inline-block;
-      padding: 2px;
-      vertical-align: middle;
-    }
-
-    .right {
-      transform: rotate(-45deg);
-      -webkit-transform: rotate(-45deg);
-    }
-
-    #toggle {
-      display:inline-block; 
-    }
-
-  </style>
-
 {% endblock %}
 
 {% block content %}
@@ -44,25 +24,7 @@
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
 
-  <script>
-    $(document).on('click','#informacoes_tag',function(){
-      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
-      else $("#informacoes").css("display", "block");
-      $("#toggle").toggle( "slide" );
-    });
-  </script>
-  
-  <div id="informacoes" style="width:fit-content; margin-bottom: 6px; font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
-    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
-    <div id="toggle" style="padding-top: 10px;display: none;"> 
-    <label><input id="periodo" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Período</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="organizacao" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="orientador" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(4)').show() : $('#ProjetosTable tr > *:nth-child(4)').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="grupo" onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> Grupo</label>&nbsp;&nbsp;&nbsp;
-      <label class="grupo"><input id="email" onchange="($(this).prop('checked') ? $('.email').show() : $('.email').hide())" type="checkbox" checked /> e-mail</label>&nbsp;&nbsp;&nbsp;
-      <label class="grupo"><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> curso</label>&nbsp;&nbsp;&nbsp;
-    </div>
-  </div>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  {% include "informacoes.html" %}
 
   <table  id="ProjetosTable" class="projetos">
 
@@ -295,14 +257,7 @@
     $(".filter").change(carrega_semestre);    
     $(document).ready(carrega_semestre);
 
-    function carrega_pagina() {
-      ($("#periodo").prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide());
-      ($("#organizacao").prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide());
-      ($("#orientador").prop('checked') ? $('#ProjetosTable tr > *:nth-child(4)').show() : $('#ProjetosTable tr > *:nth-child(4)').hide());
-      ($("#grupo").prop('checked') ? $('.grupo').show() : $('.grupo').hide());
-      ($("#email").prop('checked') ? $('.email').show() : $('.email').hide());
-      ($("#curso").prop('checked') ? $('.curso').show() : $('.curso').hide());
-    };
+    function carrega_pagina() {};
 
     function carrega_site() {
       var filterEdicao = localStorage.getItem("filterEdicao");
