--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -21,23 +21,6 @@
       height:auto;
       width:auto;
     }
-    
-    .arrow {
-      border: solid black;
-      border-width: 0px 2px 2px 0px;
-      display: inline-block;
-      padding: 2px;
-      vertical-align: middle;
-    }
-
-    .right {
-      transform: rotate(-45deg);
-      -webkit-transform: rotate(-45deg);
-    }
-
-    #toggle {
-      display:inline-block; 
-    }
 
     .projline {
       margin-bottom:2em;
@@ -46,8 +29,8 @@
       border-radius: 18px;
       border-style: solid;
       border-color: LightGray;
+      width: 100%;
     }
-
   </style>
 
 {% endblock %}
@@ -63,34 +46,7 @@
       {% include "edicoes.html" %}
   {% endwith %}
 
-  <script>
-    $(document).on('click','#informacoes_tag',function(){
-      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
-      else $("#informacoes").css("display", "block");
-      $("#toggle").toggle( "slide" );
-    });
-  </script>
-
-  <div id="informacoes" style="width:fit-content; margin-bottom: 6px; font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
-    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
-    <div id="toggle" style="padding-top: 10px;display: none;"> 
-      <label><input id="logo" onchange="($(this).prop('checked') ? $('.logo').show() : $('.logo').hide())" type="checkbox" checked /> Logo</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="descricao" onchange="($(this).prop('checked') ? $('.descricao').show() : $('.descricao').hide())" type="checkbox" checked /> Descrição</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="titulo_original" onchange="($(this).prop('checked') ? $('.titulo_original').show() : $('.titulo_original').hide())" type="checkbox" checked /> Título original</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="apresentacoes" onchange="($(this).prop('checked') ? $('.apresentacao').show() : $('.apresentacao').hide())" type="checkbox" checked /> Apresentações</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="coorientador" onchange="($(this).prop('checked') ? $('.coorientador').show() : $('.coorientador').hide())" type="checkbox" checked /> Coorientador</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="estudantes" onchange="($(this).prop('checked') ? $('.estudantes').show() : $('.estudantes').hide())" type="checkbox" checked /> Estudantes</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> Cursos</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="organizacao" onchange="($(this).prop('checked') ? $('.organizacao').show() : $('.organizacao').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="website" onchange="($(this).prop('checked') ? $('.website').show() : $('.website').hide())" type="checkbox" checked /> Website</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="conexoes" onchange="($(this).prop('checked') ? $('.conexoes').show() : $('.conexoes').hide())" type="checkbox" checked /> Conexões</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="papeis" onchange="($(this).prop('checked') ? $('.papeis').show() : $('.papeis').hide())" type="checkbox" checked /> Papéis</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="totais" onchange="($(this).prop('checked') ? $('.totais').show() : $('.totais').hide())" type="checkbox" checked /> Totais</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="emails" onchange="($(this).prop('checked') ? $('.emails').show() : $('.emails').hide())" type="checkbox" checked /> e-mails</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="avancado" onchange="($(this).prop('checked') ? $('.avancado').show() : $('.avancado').hide())" type="checkbox" checked /> Avancados</label>&nbsp;&nbsp;&nbsp;
-    </div>
-  </div>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  {% include "informacoes.html" %}
 
   <br>
   
@@ -366,14 +322,7 @@
     {% endif %}
 
     <script>
-      function carrega_pagina() {
-        ($('#logo').prop('checked') ? $('.logo').show() : $('.logo').hide());
-        ($('#descricao').prop('checked') ? $('.descricao').show() : $('.descricao').hide());
-        ($('#organizacao').prop('checked') ? $('.organizacao').show() : $('.organizacao').hide());
-        ($('#orientador').prop('checked') ? $('.orientador').show() : $('.orientador').hide());
-        ($('#estudantes').prop('checked') ? $('.estudantes').show() : $('.estudantes').hide());
-        ($('#totais').prop('checked') ? $('.totais').show() : $('.totais').hide());
-      }
+      function carrega_pagina() {}
       $(document).ready(carrega_pagina);
     </script>
     
