--- a/propostas/templates/propostas/procura_grupos.html
+++ b/propostas/templates/propostas/procura_grupos.html
@@ -24,27 +24,6 @@
     
   </style>
 
-
-  <style>
-    .arrow {
-      border: solid black;
-      border-width: 0px 2px 2px 0px;
-      display: inline-block;
-      padding: 2px;
-      vertical-align: middle;
-    }
-
-    .right {
-      transform: rotate(-45deg);
-      -webkit-transform: rotate(-45deg);
-    }
-
-    #toggle {
-      display:inline-block; 
-    }
-
-  </style>
-
 {% endblock %}
 
 {% block content %}
@@ -56,33 +35,7 @@
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" with com_cursos=True %}
 
-  <script>
-    $(document).on('click','#informacoes_tag',function(){
-      if($("#toggle").is(':visible')) $("#informacoes").css("display", "inline");
-      else $("#informacoes").css("display", "block");
-      $("#toggle").toggle( "slide" );
-    });
-  </script>
-
-  <div id="informacoes" style="width:fit-content; margin-bottom: 6px; font-size:0.8rem; display: inline; border: 1px solid lightgray; padding: 1px;">
-    <span id="informacoes_tag" style="cursor: pointer; color:gray;"><b>Informações <i class="arrow right"></i>&nbsp;</b></span>
-    <div id="toggle" style="padding-top: 10px;display: none;"> 
-      <label><input id="logo" onchange="($(this).prop('checked') ? $('.logo').show() : $('.logo').hide())" type="checkbox" checked /> Logo</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="descricao" onchange="($(this).prop('checked') ? $('.descricao').show() : $('.descricao').hide())" type="checkbox" checked /> Descrição</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="apresentacoes" onchange="($(this).prop('checked') ? $('.apresentacao').show() : $('.apresentacao').hide())" type="checkbox" checked /> Apresentações</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="estudantes" onchange="($(this).prop('checked') ? $('.estudantes').show() : $('.estudantes').hide())" type="checkbox" checked /> Estudantes</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> Cursos</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="organizacao" onchange="($(this).prop('checked') ? $('.organizacao').show() : $('.organizacao').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="website" onchange="($(this).prop('checked') ? $('.website').show() : $('.website').hide())" type="checkbox" checked /> Website</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="conexoes" onchange="($(this).prop('checked') ? $('.conexoes').show() : $('.conexoes').hide())" type="checkbox" checked /> Conexões</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="papeis" onchange="($(this).prop('checked') ? $('.papeis').show() : $('.papeis').hide())" type="checkbox" checked /> Papéis</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="totais" onchange="($(this).prop('checked') ? $('.totais').show() : $('.totais').hide())" type="checkbox" checked /> Totais</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="grafico" onchange="($(this).prop('checked') ? $('.grafico').show() : $('.grafico').hide())" type="checkbox" checked /> Gráfico</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="emails" onchange="($(this).prop('checked') ? $('.emails').show() : $('.emails').hide())" type="checkbox" checked /> e-mails</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="emails" onchange="($(this).prop('checked') ? $('.avancado').show() : $('.avancado').hide())" type="checkbox" checked /> Avancados</label>&nbsp;&nbsp;&nbsp;
-    </div>
-  </div>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+  {% include "informacoes.html" %}
 
   {% comment %} 
   <script>
@@ -345,18 +298,8 @@
 
       }
 
-      ($('#logo').prop('checked') ? $('.logo').show() : $('.logo').hide());
-      ($('#descricao').prop('checked') ? $('.descricao').show() : $('.descricao').hide());
-      ($('#organizacao').prop('checked') ? $('.organizacao').show() : $('.organizacao').hide());
-      ($('#orientador').prop('checked') ? $('.orientador').show() : $('.orientador').hide());
-      ($('#estudantes').prop('checked') ? $('.estudantes').show() : $('.estudantes').hide());
-      ($('#totais').prop('checked') ? $('.totais').show() : $('.totais').hide());
-      ($('#grafico').prop('checked') ? $('.grafico').show() : $('.grafico').hide());
-
       {% comment %} // Só mostra informação de semestre se edição é todas {% endcomment %}
       ($("#filterEdicao option:selected").attr("value") == "todas" ? $('.semestre').show() : $('.semestre').hide());
-
-      
 
     </script>
 
@@ -370,23 +313,7 @@
     {% endif %}
 
     <script>
-      function carrega_pagina() {
-        ($("#logo").prop('checked') ? $('.logo').show() : $('.logo').hide());
-        ($("#descricao").prop('checked') ? $('.descricao').show() : $('.descricao').hide());
-        ($("#apresentacao").prop('checked') ? $('.apresentacao').show() : $('.apresentacao').hide());
-        ($("#orientador").prop('checked') ? $('.orientador').show() : $('.orientador').hide());
-        ($("#estudantes").prop('checked') ? $('.estudantes').show() : $('.estudantes').hide());
-        ($("#curso").prop('checked') ? $('.curso').show() : $('.curso').hide());
-        ($("#organizacao").prop('checked') ? $('.organizacao').show() : $('.organizacao').hide());
-        ($("#website").prop('checked') ? $('.website').show() : $('.website').hide());
-        ($("#conexoes").prop('checked') ? $('.conexoes').show() : $('.conexoes').hide());
-        ($("#papeis").prop('checked') ? $('.papeis').show() : $('.papeis').hide());
-        ($("#totais").prop('checked') ? $('.totais').show() : $('.totais').hide());
-        ($("#grafico").prop('checked') ? $('.grafico').show() : $('.grafico').hide());
-        ($("#emails").prop('checked') ? $('.emails').show() : $('.emails').hide());
-        ($("#avancado").prop('checked') ? $('.avancado').show() : $('.avancado').hide());
-      };
-
+      function carrega_pagina() {};
       $(document).ready(carrega_pagina);
     </script>
     
