--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,30 @@
   <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
   <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script> {% comment %} Necessário para os tooltips e Bootstrap {% endcomment %}
   <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js' %}"></script>
+
+  {% comment %} Para pegar erros {% endcomment %}
+  {% comment %} https://stackoverflow.com/questions/69470852/how-to-use-js-to-create-an-error-message-that-is-displayed-on-the-user-interface {% endcomment %}
+  <script>
+    window.onerror = function (msg, url, lineNo, columnNo, error) {
+      var string = msg.toLowerCase();
+      var substring = "script error";
+      if (string.indexOf(substring) > -1){
+        alert('Erro de Execução de JavaScript, contactar: lpsoares@insper.edu.br');
+      } else {
+        var message = [
+          'Message: ' + msg,
+          'URL: ' + url,
+          'Line: ' + lineNo,
+          'Column: ' + columnNo,
+          'Error object: ' + JSON.stringify(error),
+          'contactar: lpsoares@insper.edu.br'
+        ].join(' - ');
+        alert(message);
+      }
+      return false;
+    };
+  </script>
+
   {% block head %}
   {% endblock %}
 </head>
